[gd_scene load_steps=3 format=2]

[ext_resource path="res://PlatformerExample/DeadScene.gd" type="Script" id=1]
[ext_resource path="res://PlatformerExample/theme.tres" type="Theme" id=2]

[node name="DeadScene" type="Node2D"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 25.0
margin_right = 475.0
margin_bottom = 500.0
grow_horizontal = 2
theme = ExtResource( 2 )
alignment = 1

[node name="lblHiScore2" type="Label" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 450.0
margin_bottom = 75.0
text = "== Most score =="
align = 1
uppercase = true

[node name="lblHiScore" type="Label" parent="VBoxContainer"]
margin_top = 79.0
margin_right = 450.0
margin_bottom = 98.0
align = 1

[node name="lblHiAnvil2" type="Label" parent="VBoxContainer"]
margin_top = 102.0
margin_right = 450.0
margin_bottom = 121.0
text = "== Most anvils =="
align = 1
uppercase = true

[node name="lblHiAnvil" type="Label" parent="VBoxContainer"]
margin_top = 125.0
margin_right = 450.0
margin_bottom = 144.0
align = 1

[node name="lblHiCoin2" type="Label" parent="VBoxContainer"]
margin_top = 148.0
margin_right = 450.0
margin_bottom = 167.0
text = "== Most coins =="
align = 1
uppercase = true

[node name="lblHiCoin" type="Label" parent="VBoxContainer"]
margin_top = 171.0
margin_right = 450.0
margin_bottom = 190.0
align = 1

[node name="lblHodlr5" type="Label" parent="VBoxContainer"]
margin_top = 194.0
margin_right = 450.0
margin_bottom = 213.0
align = 1

[node name="lblHodlr8" type="Label" parent="VBoxContainer"]
margin_top = 217.0
margin_right = 450.0
margin_bottom = 236.0
align = 1

[node name="lblDestroyed" type="Label" parent="VBoxContainer"]
margin_top = 240.0
margin_right = 450.0
margin_bottom = 259.0
text = "This system was destroyed by:"
align = 1

[node name="lblAnvils" type="Label" parent="VBoxContainer"]
margin_top = 263.0
margin_right = 450.0
margin_bottom = 282.0
text = "0 anvils"
align = 1

[node name="lblHodlr" type="Label" parent="VBoxContainer"]
margin_top = 286.0
margin_right = 450.0
margin_bottom = 305.0
text = "with"
align = 1

[node name="lblCoins" type="Label" parent="VBoxContainer"]
margin_top = 309.0
margin_right = 450.0
margin_bottom = 328.0
text = "0 coins"
align = 1

[node name="lblHodlr2" type="Label" parent="VBoxContainer"]
margin_top = 332.0
margin_right = 450.0
margin_bottom = 351.0
text = "and"
align = 1

[node name="lblScore" type="Label" parent="VBoxContainer"]
margin_top = 355.0
margin_right = 450.0
margin_bottom = 374.0
text = "0 score"
align = 1

[node name="lblHodlr4" type="Label" parent="VBoxContainer"]
margin_top = 378.0
margin_right = 450.0
margin_bottom = 397.0
align = 1

[node name="btnChangeBoy" type="Button" parent="VBoxContainer"]
margin_top = 401.0
margin_right = 450.0
margin_bottom = 420.0
text = "Change MetaBoy"

[node name="btnTryAgain" type="Button" parent="VBoxContainer"]
margin_top = 424.0
margin_right = 450.0
margin_bottom = 443.0
text = "Try Again"

[connection signal="pressed" from="VBoxContainer/btnChangeBoy" to="." method="_on_btnChangeBoy_pressed"]
[connection signal="pressed" from="VBoxContainer/btnTryAgain" to="." method="_on_btnTryAgain_pressed"]
